--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 "CancelButtonText": "Cancel",
 "V":"1.1",
 "tutor":"https://vt.tiktok.com/ZSN46AtQU/",
-"Link":"https://play.google.com/store/apps/details?id=0P_Enjt3oer",
+"Link":"https://play.google.com/store/apps/details?id=com.Op.Inj3ct0err",
 "Judul":"{ OP Injector }",
 "Info":""
 }
