--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 [
 {
 "Visibility": "INVISIBLE",
-"Title": "VERSION 1.1 TELAH TERSEDIA",
+"Title": "VERSION 1.4 TELAH TERSEDIA",
 "Description": "harap update versi anda ke versi terbaru",
 "MainTextButton": "Update",
 "Cancelable": "true",
 "CancelButtonText": "Cancel",
-"V":"1.1",
-"tutor":"https://vt.tiktok.com/ZSN46AtQU/",
+"V":"1.4",
+"tutor":"https://vt.tiktok.com/ZSFrFdseL/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
 "Info":""
