--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 "Judul":"{ OP Injector }",
 "Info":"
 =============================
+25-02-2024
+skin new default skin:
+
+paquito pacquiao, paquito star, roger epic, roger epic2, roger epic3, roger m3, roger transformers, ruby elite2, ruby epic, ruby star, silvana collector, sun collector+, sun lunar fest, terizla elite, terizla halloween, thamuz elite, thamuz star, xborg star, yin star, yin star painted, zilong 515
+
+=============================
 22-02-2024
 skin new default skin:
 
