--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
 "Judul":"{ OP Injector }",
 "Info":"
 =============================
+03-03-2024
+skin new default skin:
+
+arlott star, edith starlight, franco blazing, franco halloween, franco special, franco star, gatotkaca epic, gatotkaca epic2, gloo special, grock epic, grock star, grock venom, hilda special, hilda zodiac, hylos epic, johnson epic, johnson saber, khufra starlight, khufra valentine, minotaur special, minotaur zodiac, rafaela as, rafaela christmas, rafaela epic, rafaela mpl
+
+=============================
+02-03-2024
+skin new default skin:
+
+akai epic, atlas msc, baxia special, moskov abyss, moskov epic, natan starlight, pharsa collector, pharsa star, pharsa msc, popol & kupa elite, popol & kupa star, popol & kupa transformer
+
+=============================
+29-02-2024
+skin new default skin:
+
+beatrix elite, beatrix m4, beatrix vibrant fiesta, brody mpl, brody star, bruno hello striker, bruno star, claude blazing, claude summer, clint m2, clint special, clint star2, hanabi collector, hanabi epic, hanabi venom, irithel epic, irithel epic2, karrie annual star, karrie epic, karrie epic2, karrie epic3, kimmy dragon tamer, kimmy epic, kimmy star
+
+=============================
+28-02-2024
+skin new default skin:
+
+kagura epic, kagura summer, lunox epic, lunox epic2, lunox epic3, lunox zodiac, lunox epic, lunox legend, luo yi epic, luo yi lunar fest, luo yi star, lylia elite, lylia halloween, lylia special, nana elite2, nana epic, nana star, nana summer, odette lunar fest, odette special, pharsa epic, valentina collector, valir collector, valir dragon tamer, valir phoenik ikki
+
+=============================
+27-02-2024
+skin new default skin:
+
+alice epic, alice special, aurora kof, aurora zodiac, cecilion collector, cecilion elite, cecilion valentine, cecilion star, change epic, change epic2, cyclops collector, cyclops halloween, esmeralda blazing, eudora christmas, eudora epic, eudora limited, gord starlight, harith 515, harith champion, harith epic, harith lightborn, harley epic, joy basic, kadita special
+
+=============================
 25-02-2024
 skin new default skin:
 
@@ -81,7 +111,6 @@ aldous collector, alpha abyss, alucard legend, angela hellokity, argus starwars,
 2023-09-28:
 sound effect skill hero tidak berubah di kernakan nama file audio ml di rubah oleh moonton. sekarang saya bikin fitur New Skin Default Skin, guna nya di situ nanti akan saya pasang skin full effect + sound nya, bertahap kerna skin mlbb banyak banget
 
-saya baru saja menambahkan hayabusa shura. silahkan di coba dan rasakan perbedaan nya 
-"
+saya baru saja menambahkan hayabusa shura. silahkan di coba dan rasakan perbedaan nya"
 }
 ]
