--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 "tutor":"https://vt.tiktok.com/ZSFrFdseL/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
+"YOUTUBE":"https://youtube.com/@remobainjector?si=_dlv1IrkObPHEXqL",
+"TIKTOK":"https://www.tiktok.com/@bang_op9?_t=8lZXOPGCaEK&_r=1",
+"WA":"https://chat.whatsapp.com/FOTuPiLDp3A9hDIxMbcZ9S",
+"TELEGRAM":"https://t.me/ngulikvip",
 "Info":"
 =============================
 03-03-2024
