--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 "tutor":"https://vt.tiktok.com/ZSFrFdseL/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
-"YOUTUBE":"https://youtube.com/@remobainjector?si=_dlv1IrkObPHEXqL",
+"YOUTUBE":"https://youtube.com/@menthol99?si=QPnjcr_XVEuMeJDp",
 "TIKTOK":"https://www.tiktok.com/@bang_op9?_t=8lZXOPGCaEK&_r=1",
 "WA":"https://chat.whatsapp.com/DVfKiKtuOwDIWkNLGGPCI5",
 "TELEGRAM":"https://t.me/ngulikvip",
