--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 [
 {
-"Visibility": "INVISIBLE",
-"Title": "VERSION 1.4 TELAH TERSEDIA",
-"Description": "harap update versi anda ke versi terbaru",
+"Visibility": "VISIBLE",
+"Title": "PEMBERITAHUAN",
+"Description": "aplikasi kami tutup sementara kerna server down. kami akan memperbaiki nya pada versi berikut nya
+
+the application experienced server down. We will fix it as soon as possible in the next version
+      
+",
+
 "MainTextButton": "Update",
 "Cancelable": "true",
 "CancelButtonText": "Cancel",
