--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ the application experienced server down. We will fix it as soon as possible in t
 ",
 
 "MainTextButton": "Update",
-"Cancelable": "true",
+"Cancelable": "false",
 "CancelButtonText": "Cancel",
-"V":"1.4",
+"V":"1.10",
 "tutor":"https://vt.tiktok.com/ZSFrFdseL/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
