--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 [
 {
-"Visibility": "INVISIBLE",
-"Title": "PEMBERITAHUAN",
-"Description": "aplikasi kami tutup sementara kerna server down. kami akan memperbaiki nya pada versi berikut nya
-
-the application experienced server down. We will fix it as soon as possible in the next version
-      
-",
+"Visibility": "VISIBLE",
+"Title": "UPDATE NOW VERSION",
+"Description": " Kini Versi 1.10 tersedia. Harap Update Ke Versi Terbaru",
 
 "MainTextButton": "Update",
 "Cancelable": "false",
