--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 "Description": " Kini Versi 1.10 tersedia. Harap Update Ke Versi Terbaru",
 
 "MainTextButton": "Update",
-"Cancelable": "false",
+"Cancelable": "true",
 "CancelButtonText": "Cancel",
 "V":"1.10",
 "tutor":"https://vt.tiktok.com/ZSFrFdseL/",
