--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 {
 "Visibility": "VISIBLE",
 "Title": "UPDATE NOW VERSION",
-"Description": " Kini Versi 1.10 tersedia. Harap Update Ke Versi Terbaru",
+"Description": " Kini Versi 1.11 tersedia. Harap Update Ke Versi Terbaru
+dan bantu kasih rating 5",
 
 "MainTextButton": "Update",
 "Cancelable": "true",
 "CancelButtonText": "Cancel",
-"V":"1.10",
+"V":"1.11",
 "tutor":"https://vt.tiktok.com/ZSFrFdseL/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
