--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
 {
-"Visibility": "VISIBLE",
+"Visibility": "INVISIBLE",
 "Title": "UPDATE NOW VERSION",
 "Description": " Kini Versi 1.11 tersedia. Harap Update Ke Versi Terbaru
 dan bantu kasih rating 5",
