--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ dan bantu kasih rating 5",
 "Cancelable": "true",
 "CancelButtonText": "Cancel",
 "V":"1.11",
-"tutor":"https://vt.tiktok.com/ZSFrFdseL/",
+"tutor":"https://vt.tiktok.com/ZSBNgfNsn/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
 "shizuku":"https://vt.tiktok.com/ZSkEnJs7A/",
