--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ dan bantu kasih rating 5",
 "tutor":"https://vt.tiktok.com/ZSBNgfNsn/",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
-"shizuku":"https://youtube.com/shorts/WZ4JF-iHuUk?si=ut09pHsUDGu3x7eF",
+"shizuku":"https://youtube.com/shorts/WLRHlaAY2kY?si=sdwffavjmeiUxeTv",
 "YOUTUBE":"https://youtube.com/@menthol99?si=QPnjcr_XVEuMeJDp",
 "TIKTOK":"https://www.tiktok.com/@bang_op9?_t=8lZXOPGCaEK&_r=1",
 "WA":"https://chat.whatsapp.com/DVfKiKtuOwDIWkNLGGPCI5",
