--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ dan bantu kasih rating 5",
 "Cancelable": "true",
 "CancelButtonText": "Cancel",
 "V":"1.11",
-"tutor":"https://vt.tiktok.com/ZSBNgfNsn/",
+"tutor":"https://youtube.com/shorts/f7Sp_7L2Hl0?si=WK_63pjUAvocv4aF",
 "Link":"https://play.google.com/store/apps/details?id=com.sopinje.tct",
 "Judul":"{ OP Injector }",
 "shizuku":"https://youtube.com/shorts/wqpePvKeLHQ?si=rrVnLEBpx5IXw38a",
